<resources>
    <string name="app_name">CookBook</string>

    <string name="title_cookbook">Cookbook</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_shoplist">Shoplist</string>
    <string name="title_my_recipes">My recipes</string>
    <string name="search_title">Search…</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_cooking_time">Cooking time</string>

    <string name="no_favorites_yet">No favorites yet…</string>
    <string name="hint_search">search…</string>
    <string name="create_your_own_recipe">Create your own recipe…</string>
    <string name="hint_mealtype">dinner</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredients_1">Ingredients</string>
    <string name="hint_ingredients_list"> product1\n product2\n product3</string>
    <string name="go_to_the_recipe">Go to the recipe</string>
    <string name="add_products_to_buy">Add products to buy…</string>
    <string name="hint_product_name">Product name</string>
    <string name="enter_text_for_searching">Enter text for searching…</string>
    <string name="create_recipe_error_text">Fields of the title, ingredients, description need to be filled</string>
    <string name="create_recipe_success_text">Recipe is create successful</string>
    <string name="impossible_value">Impossible value</string>

    <string name="title_mealtype">Mealtype:</string>
    <string name="title_cooking_time">Cooking time:</string>
    <string name="min">min</string>
    <string name="hours">h</string>
    <string name="new_recipe">New recipe</string>
    <string name="save">Save</string>

    <string name="breakfast">breakfast</string>
    <string name="snack">snack</string>
    <string name="lunch">lunch</string>
    <string name="tea">tea</string>
    <string name="dinner">dinner</string>
    <string-array name="spinner_array_meal_type">
        <item>---MealType---</item>

        <item>snack</item>
        <item>lunch</item>
        <item>tea</item>
        <item>dinner</item>
    </string-array>

</resources>